<resources>
    <string name="app_name">Todo app</string>
    <string name="title_activity_new_to_do_note">NewToDoNote</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_new_list_note" />
    <string name="textview">TextView</string>
    <string name="create_new_note">Create New Note </string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="deadline">Deadline</string>
    <string name="priority">Priority</string>
    <string name="text_title"> Enter The Note Title . . .</string>
    <string name="text_description"> Enter The Note Description . . .</string>
    <string name="priority_high">High</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_low">Low</string>
    <string name="add_new_note">Add New Note</string>
    <string name="cancel_note">Cancel</string>
    <string name="delete_note">Delete</string>
    <string name="save_note">Save</string>
    <!--<string name="textview">TextView</string> -->
</resources>