<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteEditor">


    <Button
        android:id="@+id/AddNote"
        android:layout_width="184dp"
        android:layout_height="60dp"
        android:onClick="createnoteFunction"
        android:text="@string/add_new_note"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/Save"
        app:layout_constraintEnd_toStartOf="@+id/Cancel"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PriorityLabel"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="241dp"
        android:layout_height="42dp"
        android:layout_marginTop="60dp"
        android:text="@string/create_new_note"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Description"
        android:layout_width="337dp"
        android:layout_height="40dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toTopOf="@+id/Deadline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.936" />

    <TextView
        android:id="@+id/DeadlineLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/deadline"
        app:layout_constraintBottom_toTopOf="@+id/Deadline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Title"
        android:layout_width="337dp"
        android:layout_height="40dp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.566" />

    <EditText
        android:id="@+id/Deadline"
        android:layout_width="337dp"
        android:layout_height="40dp"
        android:layout_marginBottom="352dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/DescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="106dp"
        android:layout_height="144dp"
        android:layout_marginBottom="-20dp"
        app:layout_constraintBottom_toTopOf="@+id/AddNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Deadline">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/priority_high"
            android:textColor="@android:color/tertiary_text_light" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/priority_medium"
            android:textColor="@android:color/tertiary_text_light" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/priority_low"
            android:textColor="@android:color/tertiary_text_light" />
    </RadioGroup>

    <TextView
        android:id="@+id/PriorityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="24dp"
        android:text="@string/priority"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Deadline"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="184dp"
        android:layout_height="60dp"
        android:text="@string/cancel_note"
        android:onClick="cancelFunction"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/Delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toEndOf="@+id/Save"
        app:layout_constraintTop_toBottomOf="@+id/PriorityLabel"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/Delete"
        android:layout_width="182dp"
        android:layout_height="58dp"
        android:layout_marginBottom="40dp"
        android:onClick="deleteFunction"
        android:text="@string/delete_note"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/Save" />

    <Button
        android:id="@+id/Save"
        android:layout_width="184dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:onClick="updateFunction"
        android:text="@string/save_note"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>