<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="364dp"
        android:layout_height="652dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <TextView
        android:id="@+id/editTextTitle"
        android:layout_width="296dp"
        android:layout_height="29dp"
        android:ems="10"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/title"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="296dp"
        android:layout_height="39dp"
        android:background="@drawable/border"
        android:inputType="text"
        android:hint="@string/text_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335"
        android:gravity="center"
        android:autofillHints="" />


    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="108dp"
        android:layout_height="42dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/priority_medium"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/priority_high"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="87dp"
        android:layout_height="41dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/priority_low"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701" />

    <Button
        android:id="@+id/button"
        android:layout_width="192dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/purple_700"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/add_new_note"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="296dp"
        android:layout_height="39dp"
        android:background="@drawable/border"
        android:hint="@string/text_description"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:autofillHints="" />

    <TextView
        android:id="@+id/editTextTextDescription"
        android:layout_width="296dp"
        android:layout_height="29dp"
        android:ems="10"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/description"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />

    <TextView
        android:id="@+id/editTextTextPriority"
        android:layout_width="296dp"
        android:layout_height="29dp"
        android:ems="10"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/priority"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="318dp"
        android:layout_height="40dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/create_new_note"
        android:textColor="@color/purple_700"
        android:textColorHint="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

</androidx.constraintlayout.widget.ConstraintLayout>
