<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/editTextTitle"
        android:layout_width="296dp"
        android:layout_height="29dp"
        android:ems="10"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/title"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

    <Button
        android:id="@+id/button"
        android:layout_width="192dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/purple_700"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/add_new_note"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="296dp"
        android:layout_height="39dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:gravity="center"
        android:hint="@string/text_title"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/editTextTextDescription"
        android:layout_width="296dp"
        android:layout_height="29dp"
        android:ems="10"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/description"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="296dp"
        android:layout_height="39dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:gravity="center"
        android:hint="@string/text_description"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="318dp"
        android:layout_height="40dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/create_new_note"
        android:textColor="@color/purple_700"
        android:textColorHint="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/editTextTextPriority"
        android:layout_width="296dp"
        android:layout_height="29dp"
        android:ems="10"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/priority"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="230dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/priority_low"
            android:textColor="@color/purple_700"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="108dp"
            android:layout_height="42dp"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/priority_medium"
            android:textColor="@color/purple_700"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/priority_high"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.825"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7" />
    </RadioGroup>

    <EditText
        android:id="@+id/test"
        android:layout_width="226dp"
        android:layout_height="39dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:importantForAutofill="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904" />

    <FrameLayout
        android:id="@+id/FrameBorder"
        android:layout_width="362dp"
        android:layout_height="679dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
